clusters/iot/namespace-kube-system/traefik-fwd-auth.yaml
#
# Traefik Forward Auth Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: kube-system
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: thomseddon/traefik-forward-auth:2-arm
          name: traefik-forward-auth
          args:
            - --log-level=debug
          ports:
            - containerPort: 4181
              protocol: TCP
---
#
# Auth Service
#
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: kube-system
  labels:
    app: traefik-forward-auth
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
    - name: auth-http
      port: 4181
      targetPort: 4181

---
#
# HTTPS Redirect Middleware (forces HTTP -> HTTPS)
#
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
#
# Auth Middleware
#
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: kube-system
spec:
  forwardAuth:
    address: http://traefik-forward-auth:4181
    authResponseHeaders:
      - X-Forwarded-User
